MDEV-7083: sys_vars.innodb_sched_priority* tests fail in buildbot on work-amd64-valgrind.

Fixed issue by finding out first the current used priority
for both treads and using that seeing did we really change
the priority or not.